change to index.html

--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
   <button>Subscribe</button> -->
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="skeleton.js"></script>
+  <script src="index.js"></script>
   </body>
 </html>
